fixed add item form being cut off at the bottom in mobile views

--- a/src/app/calendar/calendar.component.scss
+++ b/src/app/calendar/calendar.component.scss
@@ -459,7 +459,7 @@
     }
 
     @media screen and (max-width: $mid-small) {
-        height: 89%;
+        height: 87%;
         top: 0px;
         box-shadow: none;
     }
